changes on images

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <b>Photo:</b>
-  <%= image_tag(@profile.photo.url(:small)) %>
+  <%= image_tag(@profile.photo.url( :thumb)) %>
 </p>
 
 <p>
